--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-select": "^5.7.7",
     "sonner": "^1.2.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
