--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookies-next": "^4.1.0",
+    "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
