--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "cookies-next": "^4.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "query-string": "^8.1.0",
@@ -37,6 +38,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
