--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.49.2",
     "react-select": "^5.7.7",
     "sonner": "^1.2.4",
+    "swiper": "^11.0.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
